--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
             shrink-to-fit=no"
     />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="files/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./public/css/bootstrap.min.css" />
     <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
       rel="stylesheet"
     />
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="files/css/all.css" />
+    <link rel="stylesheet" href="./public/css/all.css" />
     <!-- Slick Slider CSS -->
-    <link rel="stylesheet" href="files/css/slick.css" />
-    <link rel="stylesheet" href="files/css/slick-theme.css" />
+    <link rel="stylesheet" href="./public/css/slick.css" />
+    <link rel="stylesheet" href="./public/css/slick-theme.css" />
     <!-- Magnific popup CSS -->
-    <link rel="stylesheet" href="files/css/magnific-popup.css" />
+    <link rel="stylesheet" href="./public/css/magnific-popup.css" />
     <!-- Style CSS -->
-    <link rel="stylesheet" href="files/css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
     <title>Medenin HTML Template</title>
   </head>
   <body>
@@ -31,14 +31,14 @@
     <script type="module" src="/src/main.jsx"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="files/js/jquery-3.5.1.min.js"></script>
-    <script src="files/js/popper.min.js"></script>
-    <script src="files/js/bootstrap.min.js"></script>
+    <script src="./public/js/jquery-3.5.1.min.js"></script>
+    <script src="./public/js/popper.min.js"></script>
+    <script src="./public/js/bootstrap.min.js"></script>
     <!-- Slick Slider Js -->
-    <script src="files/js/slick.min.js"></script>
+    <script src="./public/js/slick.min.js"></script>
     <!-- Magnific popup Js -->
-    <script src="files/js/jquery.magnific-popup.min.js"></script>
+    <script src="./public/js/jquery.magnific-popup.min.js"></script>
     <!-- Script Js -->
-    <script src="files/js/script.js"></script>
+    <script src="./public/js/script.js"></script>
   </body>
 </html>
