--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
     <script type="module" src="/src/main.jsx"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="./public/js/jquery-3.5.1.min.js"></script>
-    <script src="./public/js/popper.min.js"></script>
-    <script src="./public/js/bootstrap.min.js"></script>
+    <!-- <script src="./public/js/jquery-3.5.1.min.js"></script > -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- <script src="./public/js/popper.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+
+    <!-- <script src="./public/js/bootstrap.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- Slick Slider Js -->
-    <script src="./public/js/slick.min.js"></script>
+    <!-- <script src="./public/js/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <!-- Magnific popup Js -->
-    <script src="./public/js/jquery.magnific-popup.min.js"></script>
+    <!-- <script src="./public/js/jquery.magnific-popup.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Script Js -->
     <script src="./public/js/script.js"></script>
   </body>
