--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- <script src="./public/js/jquery.magnific-popup.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Script Js -->
-    <script src="./public/js/script.js"></script>
+    <!-- <script src="./public/js/script.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/Sahil-Rathod/GrabMe.com/script.js"></script>
   </body>
 </html>
