--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./public/css/magnific-popup.css" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="./public/css/style.css" />
-    <title>Medenin HTML Template</title>
+    <title>Medexim</title>
   </head>
   <body>
     <div id="root"></div>
